# async-trait-ext

./: Cargo.toml  README.md  TODO
src/: input.rs  lib.rs  method.rs  trait.rs
src/impls/: expand.rs  mod.rs
src/methods/: lint.rs  mod.rs
src/methods/expand/: ext.rs  future_type.rs  impls.rs  mod.rs  poll.rs
src/traits/: expand.rs  lint.rs  mod.rs
tests/: basic.rs  dynamic.rs  examples.rs  lifetimes.rs  mut_pattern.rs  provided.rs  sync.rs  visibility.rs
