[package]
name = "async-trait-ext"
version = "0.1.1"
authors = ["Tom Dohrmann <erbse.13@gmx.de>"]
edition = "2018"
license = "WTFPL"
categories = ["asynchronous"]
repository = "https://github.com/Freax13/async-trait-ext"
readme = "README.md"
description = "a procedural macro for async traits"

[lib]
proc-macro = true

[features]
default = []
provided = []

[dependencies]
macro-compose = "0.1"
macro-input = "0.1"
syn = { version = "1.0", features = ["visit-mut"] }
proc-macro2 = "1.0"
quote = "1.0"
heck = "0.3"

[[test]]
name = "provided"
path = "tests/provided.rs"
required-features = ["provided"]